--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.29.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-waypoint": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
